# miniWhisper

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install.sh
.claude/: settings.json
client/: Package.swift  README.md
docs/: ADMIN.md  API.md  ARCHITECTURE.md  CHANGELOG-2026-05-10.md  (+14 more)
server/: .env.example  README.md  pyproject.toml
server/migrations/: 2026-04-27-v1-wispralt-schema.sql  2026-04-27-v2-display-name.sql  2026-05-05-v3-fallback-events.sql  2026-05-20-v4-users-kind.sql
server/scripts/: benchmark-mlx-whisper.py  prefetch-mlx-whisper.sh  run-matrix.sh
server/src/wispralt_server/: _errors.py  audio.py  auth.py  config.py  constants.py  db.py  main.py  observability.py  ratelimit_per_token.py
server/src/wispralt_server/admin/templates/: _admin_data_body.html.j2  _admin_run_insights_button.html.j2  _insight_cards.html.j2  _me_history_body.html.j2  _me_history_page.html.j2  _me_history_row.html.j2  _me_history_row_expanded.html.j2  _me_insights_body.html.j2  _stats_grid_partial.html.j2  add_employee.html.j2  add_key.html.j2  base.html.j2  data.html.j2  employee_added.html.j2  key_added.html.j2  keys.html.j2  login.html.j2  me_history.html.j2  me_insights.html.j2  me_login.html.j2  overview.html.j2  token_minted.html.j2  usage.html.j2  user_detail.html.j2  users.html.j2
server/src/wispralt_server/dictate/: parakeet.py  streaming_session.py  sync_decode.py  v1_response_builders.py
server/src/wispralt_server/insights/: __init__.py  client.py  cron.py  prompts.py  timewindow.py
server/src/wispralt_server/jobs/: runner.py  store.py
server/src/wispralt_server/meeting/: __init__.py  deepfilter.py  diarize.py  merge.py  mlx_whisper_loader.py  output.py  pipeline.py  silence.py  whisperx_loader.py
server/src/wispralt_server/middleware/: cors.py  openai_errors.py  rate_limit.py
server/src/wispralt_server/ops/: env_writer.py  staging.py
server/src/wispralt_server/routes/: admin.py  admin_data.py  admin_ui.py  dev_faults.py  dictate.py  dictate_stream.py  health.py  me.py  meeting.py  telemetry.py  transcribe_file.py  v1_models.py  v1_transcriptions.py
server/src/wispralt_server/smart_format/: __init__.py  mercury_client.py
server/src/wispralt_server/usage/: __init__.py  events.py  queue.py  writer.py
server/src/wispralt_server/users/: __init__.py  cache.py  store.py
server/src/wispralt_server/web/: __init__.py  htmx.py  templates_env.py
server/tests/: test_admin_keys.py  test_admin_routes_auth.py  test_auth_break_glass.py  test_db_health.py  test_dictate_corrupt_audio.py  test_dictate_route_422.py  test_integration_kind_guards.py  test_meeting_lazy_load.py  test_mercury_safety.py  test_observability_time_window.py  test_token_cache.py  test_usage_writer.py  test_v1_models.py  test_v1_transcriptions.py  test_whisperx_no_speech.py
server/tests/fixtures/: README.md  tiny.m4a  tiny.webm
(+116 files in other folders)
