[project]
name = "wispralt-server"
version = "0.1.0"
description = "WisprAlt — self-hosted dictation and meeting-transcription server"
requires-python = ">=3.11,<4.0"
dependencies = [
    # ML — dictation
    "parakeet-mlx==0.5.1",
    "mlx>=0.22.1,<0.32.0",
    # ML — meeting pipeline
    "whisperx==3.4.0",
    "pyannote.audio==3.3.2",
    # torch pinned: torchaudio 2.7+ removes AudioMetaData and breaks pyannote
    "torch==2.6.0",
    "torchaudio==2.6.0",
    # Web framework
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "python-multipart==0.0.9",
    # Configuration
    "pydantic==2.9",
    "pydantic-settings==2.5",
    # Audio utilities
    "soundfile==0.12.1",
    # librosa>=0.11 required for numpy 2 compatibility
    "librosa>=0.11.0,<0.12.0",
    # numpy 2.x required by parakeet-mlx; <2.3 for compatibility ceiling
    "numpy>=2.0,<2.3",
    # HuggingFace — model download + gated-repo validation
    "huggingface_hub>=0.30.2",
    # OOM guard (v3 delta)
    "psutil>=6.0",
    # Implicit dep of pyannote.audio.utils.metric (imports matplotlib at module load)
    "matplotlib>=3.8",
    # Postgres (Supabase) — multi-tenant auth + usage events
    "asyncpg>=0.29,<0.31",
    # Server-rendered admin UI templates
    "jinja2>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "ruff==0.6.9",
    "pyright==1.1.380",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wispralt_server"]

# ── torch CPU-only wheel source ───────────────────────────────────────────────
# Using the PyTorch CPU index avoids pulling the CUDA-fat wheel (~2.5 GB).
# uv respects [tool.uv.sources] when resolving; pip users must add the index manually.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# ── ruff config ───────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "TCH"]
ignore = ["E501"]  # line-length enforced by formatter

[tool.ruff.lint.isort]
known-first-party = ["wispralt_server"]

# ── pyright config ────────────────────────────────────────────────────────────
[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src"]
reportMissingTypeStubs = false

# ── pytest config ─────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]
